apps/poste/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poste
  namespace: apps
  labels:
    app: poste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poste
  template:
    metadata:
      labels:
        app: poste
    spec:
      hostNetwork: true
      containers:
        - name: poste
          image: analogic/poste.io:2.5.5
          ports:
            - containerPort: 25
              name: smtp
              protocol: TCP
            - containerPort: 8999
              name: http
              protocol: TCP
            - containerPort: 110
              name: pop3
              protocol: TCP
            - containerPort: 143
              name: imap
              protocol: TCP
            - containerPort: 465
              name: smtps
              protocol: TCP
            - containerPort: 587
              name: msa
              protocol: TCP
            - containerPort: 993
              name: imaps
              protocol: TCP
            - containerPort: 995
              name: pop3s
              protocol: TCP
            - containerPort: 4190
              name: sieve
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: poste-data-pvc
