apps/poste/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poste
  namespace: apps
spec:
  selector:
    app: poste
  ports:
    - name: http
      port: 80
      targetPort: 8999
  type: ClusterIP
